--- a/scaminformative-web/src/components/HowHelp.css
+++ b/scaminformative-web/src/components/HowHelp.css
@@ -8,14 +8,17 @@ html, body {
 
 
   .page-text{
-    margin-left: 4rem;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
     text-align: center;
     font-weight: bold;
 }
 
-.home-text h2{
+.home-text1 h2{
+    font-size: 2rem;
+    margin-top: 2rem;
+    
+}
+.home-text h1{
     font-size: 2rem;
     margin-top: 2rem;
 }
@@ -31,19 +34,39 @@ html, body {
     display: flex;
 }
 
+.header-img1 img {
+    height: 70%;
+}
+.header-img2 img {
+    height: 90%;
+    width: 90%;
+}
+
 
 @media only screen and (min-width:320px) and (max-width:480px){
-     .home-text h2{
-        text-align: center;
-        font-size: 2rem;
+     .home-text1 h2{
+        text-align:center;
+        font-size: 1.5rem;
         margin-top: 1rem;
+       
+     }
+
+     .home-text h1{
+        text-align:center;
+        font-size: 1.5rem;
+        margin-top: 1rem;
+      
      }
      .content{
-        text-align: center;
+        text-align:center;
         font-size: small;
      }
      
-    
+    .page-text {
+        text-align: center;
+        margin-top: 2rem;
+    }
+     
    
 
     .app-button{
@@ -53,7 +76,35 @@ html, body {
     }
     .btn {
         font-size: small;
+        height: 50%;
+    }
+    .header-img1 {
+        display: flex;
+        justify-content: center;
+        height: 100%;
+    }
+    .header-img2 {
+        display: flex;
+        justify-content: center;
+        height: 100%;
     }
     
-     
+    
+   
 }
+
+ 
+ @media only screen and (min-width:481px) and (max-width: 560px){
+    
+ 
+ }
+ 
+ @media only screen and (min-width:561px) and (max-width:650px){
+   
+ 
+ }
+ 
+ @media only screen and (min-width:651px) and (max-width: 1024px){
+     
+    
+ }
