--- a/scaminformative-web/src/components/TypeOfScams.css
+++ b/scaminformative-web/src/components/TypeOfScams.css
@@ -3,17 +3,16 @@ html, body {
     overflow-x: hidden;
   }
   body {
-    position: relative;
-   
+    position: relative
   }
 
 
-  .page-text{
+  .page-text-heading{
     /* margin-top: 3rem; */
     font-weight: bold;
 }
 
-.home-text1 h2{
+.home-text2 h2{
     font-size: 2rem;
     margin-top: 2rem;
     
@@ -23,28 +22,21 @@ html, body {
     margin-top: 2rem;
 }
 
-.content{
+.content-text{
     font-size: 1rem;
     font-weight: 00;
     margin-top: 1rem;
 }
 
 
-.app-button{
-    display: flex;
-}
 
-.header-img1 img {
+.header-img-phone img {
     height: 70%;
-}
-.header-img2 img {
-    height: 90%;
-    width: 90%;
 }
 
 
 @media only screen and (min-width:320px) and (max-width:480px){
-     .home-text1 h2{
+     .home-text2 h2{
         text-align:center;
         font-size: 1.5rem;
         margin-top: 1rem;
@@ -57,37 +49,25 @@ html, body {
         margin-top: 1rem;
       
      }
-     .content{
+     .content-text{
         text-align:center;
         font-size: small;
      }
      
-    .page-text {
+    .page-text-heading {
         
         margin-top: 2rem;
     }
      
    
 
-    .app-button{
-        align-items: center;
-        justify-content: center;
-       
-    }
-    .btn {
-        font-size: small;
-        height: 50%;
-    }
-    .header-img1 {
+    
+    .header-img-phone {
         display: flex;
         justify-content: center;
         height: 100%;
     }
-    .header-img2 {
-        display: flex;
-        justify-content: center;
-        height: 100%;
-    }
+   
     
     
    
