--- a/scaminformative-web/src/components/HowHelp2.css
+++ b/scaminformative-web/src/components/HowHelp2.css
@@ -11,21 +11,17 @@ html, body {
   .page-text{
     /* margin-top: 3rem; */
     font-weight: bold;
+    font-size: 3rem;
 }
 
-.home-text1 h2{
-    font-size: 2rem;
-    margin-top: 2rem;
-    
-}
-.home-text h1{
-    font-size: 2rem;
-    margin-top: 2rem;
+
+
+.sub-text {
+    font-size: 2.5rem;
 }
 
 .content{
-    font-size: 1rem;
-    font-weight: 00;
+    font-size: 1.3rem;
     margin-top: 1rem;
 }
 
@@ -48,26 +44,22 @@ html, body {
 
 
 @media only screen and (min-width:320px) and (max-width:480px){
-     .home-text1 h2{
+     .sub-text{
         text-align:center;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin-top: 1rem;
        
      }
 
-     .home-text h1{
-        text-align:center;
-        font-size: 1.5rem;
-        margin-top: 1rem;
-      
-     }
+     
+     
      .content{
         text-align:center;
         font-size: small;
      }
      
     .page-text {
-        
+        font-size: 2rem;
         margin-top: 2rem;
     }
      
